# rusticles

./: Cargo.toml  LICENSE  README.md  RESOURCES.md
OLD/: Cargo.toml
exercises/00_intro/: Cargo.toml
exercises/01_variables/: Cargo.toml  variables10.rs  variables9.rs
exercises/02_functions/: Cargo.toml  closures2.rs  closures4.rs  functions10.rs
exercises/03_if/: Cargo.toml  if7.rs  loops2.rs  loops3.rs  loops4.rs  loops5.rs  loops6.rs  patternmatching1.rs  patternmatching11.rs  patternmatching12.rs  patternmatching6.rs
exercises/04_primitive_types/: Cargo.toml  primitive_types11.rs  primitive_types13.rs  primitive_types14.rs
exercises/05_vecs/: Cargo.toml  vecs11.rs  vecs12.rs  vecs7.rs  vecs9.rs
exercises/06_move_semantics/: Cargo.toml  borrowing2.rs  borrowing4.rs  borrowing6.rs  ownership2.rs  ownership4.rs  ownership5.rs  ownership_error11.rs  ownership_error4.rs  ownership_error9.rs  slices1.rs  slices2.rs  slices3.rs
exercises/06_ownership/: Cargo.toml
exercises/07_structs/: Cargo.toml  methods11.rs  methods2.rs  methods6.rs  methods7.rs  methods9.rs  structs5.rs  structs6.rs  structs7.rs
exercises/08_enums/: Cargo.toml  enums10.rs  enums11.rs  enums5.rs  enums9.rs
exercises/09_strings/: Cargo.toml  strings6.rs  strings7.rs  strings9.rs
exercises/10_modules/: Cargo.toml
exercises/11_hashmaps/: Cargo.toml  hashmaps5.rs  hashmaps6.rs  hashmaps7.rs  hashmaps8.rs
exercises/12_options/: Cargo.toml
exercises/13_error_handling/: Cargo.toml
exercises/14_generics/: Cargo.toml  generics3.rs  generics6.rs  generics8.rs
exercises/15_traits/: Cargo.toml  traits12.rs  traits13.rs  traits15.rs  traits17.rs  traits6.rs  traits7.rs  traits8.rs
exercises/16_lifetimes/: Cargo.toml  lifetimes10.rs  lifetimes11.rs  lifetimes13.rs  lifetimes14.rs  lifetimes6.rs  lifetimes8.rs
exercises/17_tests/: Cargo.toml  tests4.rs  tests6.rs  tests8.rs
rustlings-macros/: info.toml
(+558 files in other folders)
