[workspace]
resolver = "2"
members = ["exercises/intro_exercises",
"exercises/variables_exercises",
"exercises/functions_exercises",
"exercises/if_exercises",
"exercises/primitive_types_exercises",
"exercises/vecs_exercises",
"exercises/ownership_exercises",
"exercises/structs_exercises",
"exercises/enumns_exercises",
"exercises/strings_exercises",
"exercises/modules_exercises",
"exercises/hashmaps_exercises",
"exercises/options_exercises",
"exercises/error_handlings_exercises",
"exercises/generics_exercises",
"exercises/traits_exercises",
"exercises/lifetimes_exercises",
"exercises/tests_exercises",
"exercises/iterators_exercises",
"exercises/smart_pointers_exercises",
"exercises/threads_exercises",
"exercises/async_exercises",
"exercises/design_patterns_exercises",
"exercises/macros_exercises",
"exercises/clippy_exercises",
"exercises/conversions_exercises",
"exercises/io_exercises",
"exercises/quizzes_exercises",

"solutions/intro_solutions",
"solutions/variables_solutions",
"solutions/functions_solutions",
"solutions/if_solutions",
"solutions/primitive_types_solutions",
"solutions/vecs_solutions",
"solutions/ownership_solutions",
"solutions/structs_solutions",
"solutions/enumns_solutions",
"solutions/strings_solutions",
"solutions/modules_solutions",
"solutions/hashmaps_solutions",
"solutions/options_solutions",
"solutions/error_handlings_solutions",
"solutions/generics_solutions",
"solutions/traits_solutions",
"solutions/lifetimes_solutions",
"solutions/tests_solutions",
"solutions/iterators_solutions",
"solutions/smart_pointers_solutions",
"solutions/threads_solutions",
"solutions/async_solutions",
"solutions/design_pattern_solutions",
"solutions/macros_solutions",
"solutions/clippy_solutions",
"solutions/conversions_solutions",
"solutions/io_solutions",
"solutions/quizzes_solutions",

]
